Created Django forms for Rate and ContactUs models
Added CRUD functions for new forms
Added main page view - index (views.py)
Refactored view names for Rate and ContactUs models as well as their titles in templates

--- a/app/currency/templates/base.html
+++ b/app/currency/templates/base.html
@@ -6,6 +6,7 @@
 </head>
 {% block style %}{% endblock %}
 <body>
+    {% include 'includes/navbar.html' %}
     {% block content %}{% endblock %}
 </body>
 </html>
