Created model and form for Source
Added CRUD functions for Source model
Installed new packages: django-phonenumber-field and phonenumbers that used within Source model
Minor changes to existing html templates

--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -2,4 +2,5 @@
     <a href="/">Main Page</a>
     <a href="/rate/list/">Rate</a>
     <a href="/contact_us/list/">Contact Us</a>
+    <a href="/source/list/">Source</a>
 </p>
