Added Class-Based Views for Rate model
Installed Django Debug Toolbar
All templates were grouped into separate folders
Minor changes to all template files
Minor changes to requirements.txt

--- a/app/currency/templates/contact_us/contact_us_delete.html
+++ b/app/currency/templates/contact_us/contact_us_delete.html
@@ -1,16 +1,11 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
-{% block title %}Create Source{% endblock %}
+{% block title %}Delete Feedback{% endblock %}
 
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <p>Do you really want to delete contact us form with ID = {{ feedback.id }}</p>
         <button type="submit">Submit</button>
     </form>
 {% endblock %}
