--- a/app/currency/templates/contact_us/contact_us_details.html
+++ b/app/currency/templates/contact_us/contact_us_details.html
@@ -8,6 +8,9 @@
 {% block title %}Feedback Details{% endblock %}
 
 {% block content %}
+    <p>
+        <a href="/contact_us/create/">Create new feedback</a>
+    </p>
     <table>
         <tr>
             <th>ID</th>
