--- a/app/currency/templates/contact_us/contact_us_update.html
+++ b/app/currency/templates/contact_us/contact_us_update.html
@@ -1,11 +1,6 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
-{% block title %}Create Feedback{% endblock %}
+{% block title %}Update Feedback{% endblock %}
 
 {% block content %}
     <form method="post">
