--- a/app/currency/templates/rate/rate_details.html
+++ b/app/currency/templates/rate/rate_details.html
@@ -8,6 +8,9 @@
 {% block title %}Rate Details{% endblock %}
 
 {% block content %}
+    <p>
+        <a href="/rate/create/">Create new rate</a>
+    </p>
     <table>
         <tr>
             <th>ID</th>
