--- a/app/currency/templates/source/source_create.html
+++ b/app/currency/templates/source/source_create.html
@@ -1,11 +1,6 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
-{% block title %}Create Rate{% endblock %}
+{% block title %}Create Source{% endblock %}
 
 {% block content %}
     <form method="post">
