--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -8,6 +8,9 @@
 {% block title %}Source Details{% endblock %}
 
 {% block content %}
+     <p>
+        <a href="/source/create/">Create new source</a>
+    </p>
     <table>
         <tr>
             <th>ID</th>
