Added Class-Based Views for ContactUs model
Minor changes to template files for ContactUs model

--- a/app/currency/templates/contact_us/contact_us_details.html
+++ b/app/currency/templates/contact_us/contact_us_details.html
@@ -19,10 +19,10 @@
             <th>Message</th>
         </tr>
         <tr>
-            <td>{{ feedback.id }}</td>
-            <td>{{ feedback.email_from }}</td>
-            <td>{{ feedback.subject }}</td>
-            <td>{{ feedback.message }}</td>
+            <td>{{ contactus.id }}</td>
+            <td>{{ contactus.email_from }}</td>
+            <td>{{ contactus.subject }}</td>
+            <td>{{ contactus.message }}</td>
         </tr>
     </table>
 {% endblock %}
