--- a/app/currency/templates/contact_us/contact_us_delete.html
+++ b/app/currency/templates/contact_us/contact_us_delete.html
@@ -5,7 +5,7 @@
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        <p>Do you really want to delete contact us form with ID = {{ feedback.id }}</p>
+        <p>Do you really want to delete contact us form with ID = {{ contactus.id }}</p>
         <button type="submit">Submit</button>
     </form>
 {% endblock %}
