Reworked all links
Added urls.py for currency app as well as app_name for these links
Added names for all currency app links
Changed all links in currency app templates

--- a/app/currency/templates/contact_us/contact_us_details.html
+++ b/app/currency/templates/contact_us/contact_us_details.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <p>
-        <a href="/contact_us/create/">Create new feedback</a>
+        <a href="{% url 'currency:contactus-create' %}">Create new feedback</a>
     </p>
     <table>
         <tr>
