--- a/app/currency/templates/rate/rate_details.html
+++ b/app/currency/templates/rate/rate_details.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <p>
-        <a href="/rate/create/">Create new rate</a>
+        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
     </p>
     <table>
         <tr>
