--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -9,7 +9,7 @@
 
 {% block content %}
      <p>
-        <a href="/source/create/">Create new source</a>
+        <a href="{% url 'currency:source-create' %}">Create new source</a>
     </p>
     <table>
         <tr>
