--- a/app/currency/templates/contact_us/contact_us_list.html
+++ b/app/currency/templates/contact_us/contact_us_list.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <p>
-        <a href="/contact_us/create/">Create new feedback</a>
+        <a href="{% url 'currency:contactus-create' %}">Create new feedback</a>
     </p>
     {% if object_list %}
         <table>
@@ -26,9 +26,9 @@
                     <td>{{ feedback.id }}</td>
                     <td>{{ feedback.email_from }}</td>
                     <td>{{ feedback.subject }}</td>
-                    <td><a href="/contact_us/update/{{ feedback.id }}/">Update</a></td>
-                    <td><a href="/contact_us/delete/{{ feedback.id }}/">Delete</a></td>
-                    <td><a href="/contact_us/details/{{ feedback.id }}/">Details</a></td>
+                    <td><a href="{% url 'currency:contactus-update' feedback.id %}">Update</a></td>
+                    <td><a href="{% url 'currency:contactus-delete' feedback.id %}">Delete</a></td>
+                    <td><a href="{% url 'currency:contactus-details' feedback.id %}">Details</a></td>
                 </tr>
             {% endfor %}
         </table>
