--- a/app/currency/templates/rate/rate_list.html
+++ b/app/currency/templates/rate/rate_list.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <p>
-        <a href="/rate/create/">Create new rate</a>
+        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
     </p>
     {% if object_list %}
         <table>
@@ -28,9 +28,9 @@
                     <td>{{ rate.currency }}</td>
                     <td>{{ rate.buy }}</td>
                     <td>{{ rate.sell }}</td>
-                    <td><a href="/rate/update/{{ rate.id }}/">Update</a></td>
-                    <td><a href="/rate/delete/{{ rate.id }}/">Delete</a></td>
-                    <td><a href="/rate/details/{{ rate.id }}/">Details</a></td>
+                    <td><a href="{% url 'currency:rate-update' rate.id %}">Update</a></td>
+                    <td><a href="{% url 'currency:rate-delete' rate.id %}">Delete</a></td>
+                    <td><a href="{% url 'currency:rate-details' rate.id %}">Details</a></td>
                 </tr>
             {% endfor %}
         </table>
