--- a/app/currency/templates/rate/rate_details.html
+++ b/app/currency/templates/rate/rate_details.html
@@ -22,7 +22,7 @@
         </tr>
         <tr>
             <td>{{ rate.id }}</td>
-            <td>{{ rate.currency }}</td>
+            <td>{{ rate.get_currency_display }}</td>
             <td>{{ rate.buy }}</td>
             <td>{{ rate.sell }}</td>
             <td>{{ rate.created }}</td>
