--- a/app/currency/templates/rate/rate_list.html
+++ b/app/currency/templates/rate/rate_list.html
@@ -25,7 +25,7 @@
             {% for rate in object_list %}
                 <tr>
                     <td>{{ rate.id }}</td>
-                    <td>{{ rate.currency }}</td>
+                    <td>{{ rate.get_currency_display }}</td>
                     <td>{{ rate.buy }}</td>
                     <td>{{ rate.sell }}</td>
                     <td><a href="{% url 'currency:rate-update' rate.id %}">Update</a></td>
