--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -3,5 +3,6 @@
     <a href="{% url 'currency:rate-list' %}">Rate</a>
     <a href="{% url 'currency:contactus-list' %}">Contact Us</a>
     <a href="{% url 'currency:source-list' %}">Source</a>
+    <a href="{% url 'currency:log-list' %}">Log</a>
     <a href="{% url 'admin:index' %}">Admin</a>
 </p>
