Added password reset and change features
Added corresponding templates
Added auth_base template, since some of navbar elements shouldn't be displayed in auth forms
Minor changes to settings, models and forms

--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -3,6 +3,6 @@
     <a href="{% url 'currency:rate-list' %}">Rate</a>
     <a href="{% url 'currency:contactus-list' %}">Contact Us</a>
     <a href="{% url 'currency:source-list' %}">Source</a>
-    <a href="{% url 'currency:log-list' %}">Log</a>
+    <a href="{% url 'currency:log-list' %}">Logs</a>
     <a href="{% url 'admin:index' %}">Admin</a>
 </p>
