--- a/app/currency/templates/includes/auth_navbar.html
+++ b/app/currency/templates/includes/auth_navbar.html
@@ -1,6 +1,7 @@
 <p>
     {% if request.user.is_anonymous %}
         <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'account:signup' %}">Signup</a>
         <a href="{% url 'password_reset' %}">Reset Password</a>
     {% else %}
         <a href="{% url 'logout' %}">Logout</a>
