Reworked all templates without forms
Minor changes to settings
Added custom CSS

--- a/app/currency/templates/index.html
+++ b/app/currency/templates/index.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}Main Page{% endblock %}
-{% block content %}<h3>Welcome on the main page!</h3>{% endblock %}
+
+{% block content %}
+    <div class="container-fluid bg-primary">
+        <p><h3 class="display text-center">Welcome on the main page!</h3></p>
+    </div>
+{%  endblock %}
