--- a/app/currency/templates/contact_us/contact_us_details.html
+++ b/app/currency/templates/contact_us/contact_us_details.html
@@ -1,28 +1,37 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
 {% block title %}Feedback Details{% endblock %}
 
 {% block content %}
-    <p>
-        <a href="{% url 'currency:contactus-create' %}">Create new feedback</a>
-    </p>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Email</th>
-            <th>Subject</th>
-            <th>Message</th>
-        </tr>
-        <tr>
-            <td>{{ contactus.id }}</td>
-            <td>{{ contactus.email_from }}</td>
-            <td>{{ contactus.subject }}</td>
-            <td>{{ contactus.message }}</td>
-        </tr>
-    </table>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'currency:rate-create' %}">Create new feedback</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="container">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Email</th>
+                    <th>Subject</th>
+                    <th>Message</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>{{ contactus.id }}</td>
+                    <td>{{ contactus.email_from }}</td>
+                    <td>{{ contactus.subject }}</td>
+                    <td>{{ contactus.message }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
