--- a/app/currency/templates/rate/rate_details.html
+++ b/app/currency/templates/rate/rate_details.html
@@ -1,32 +1,41 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
 {% block title %}Rate Details{% endblock %}
 
 {% block content %}
-    <p>
-        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
-    </p>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Currency</th>
-            <th>Buy</th>
-            <th>Sell</th>
-            <th>Created</th>
-            <th>Source</th>
-        </tr>
-        <tr>
-            <td>{{ rate.id }}</td>
-            <td>{{ rate.get_currency_display }}</td>
-            <td>{{ rate.buy }}</td>
-            <td>{{ rate.sell }}</td>
-            <td>{{ rate.created }}</td>
-            <td>{{ rate.source }}</td>
-        </tr>
-    </table>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'currency:rate-create' %}">Create new rate</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="container">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Currency</th>
+                    <th>Buy</th>
+                    <th>Sell</th>
+                    <th>Source</th>
+                    <th>Created</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>{{ rate.id }}</td>
+                    <td>{{ rate.get_currency_display }}</td>
+                    <td>{{ rate.buy }}</td>
+                    <td>{{ rate.sell }}</td>
+                    <td>{{ rate.source }}</td>
+                    <td>{{ rate.created }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
