--- a/app/currency/templates/rate/rate_list.html
+++ b/app/currency/templates/rate/rate_list.html
@@ -1,50 +1,56 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
 {% block title %}Rate List{% endblock %}
 
 {% block content %}
-    <p>
-        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
-    </p>
+    <div class="container">
+            <nav class="navbar navbar-expand-lg">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
     {% if object_list %}
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Currency</th>
-                <th>Buy</th>
-                <th>Sell</th>
-                <th>Source</th>
-                {% if request.user.is_superuser %}
-                    <th>Update</th>
-                    <th>Delete</th>
-                {% endif %}
-                {% if not request.user.is_anonymous %}
-                    <th>Details</th>
-                {% endif %}
-            </tr>
-            {% for rate in object_list %}
-                <tr>
-                    <td>{{ rate.id }}</td>
-                    <td>{{ rate.get_currency_display }}</td>
-                    <td>{{ rate.buy }}</td>
-                    <td>{{ rate.sell }}</td>
-                    <td>{{ rate.source }}</td>
-                    {% if request.user.is_superuser %}
-                        <td><a href="{% url 'currency:rate-update' rate.id %}">Update</a></td>
-                        <td><a href="{% url 'currency:rate-delete' rate.id %}">Delete</a></td>
-                    {% endif %}
-                    {% if not request.user.is_anonymous %}
-                        <td><a href="{% url 'currency:rate-details' rate.id %}">Details</a></td>
-                    {% endif %}
-                </tr>
-            {% endfor %}
-        </table>
-    {% else %}
-        DB is empty so far
+        <div class="container">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Currency</th>
+                        <th scope="col">Buy</th>
+                        <th scope="col">Sell</th>
+                        <th scope="col">Source</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for rate in object_list %}
+                        <tr>
+                            <td>{{ rate.id }}</td>
+                            <td>{{ rate.get_currency_display }}</td>
+                            <td>{{ rate.buy }}</td>
+                            <td>{{ rate.sell }}</td>
+                            <td>{{ rate.source }}</td>
+                            {% if request.user.is_superuser %}
+                                <td><a href="{% url 'currency:rate-update' rate.id %}">Update</a></td>
+                                <td><a href="{% url 'currency:rate-delete' rate.id %}">Delete</a></td>
+                            {% else %}
+                                <td><a href="{% url 'currency:rate-details' rate.id %}">Details</a></td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% endif %}
+{% endblock %}
+
+{% block on_empty_db %}
+    {% if not object_list %}
+        There are no records in Rate DB!
     {% endif %}
 {% endblock %}
