--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -1,30 +1,33 @@
 {% extends 'base.html' %}
 
-{% block style %}
-    {{ block.super }}
-    {% include 'includes/table_style.html' %}
-{% endblock %}
-
 {% block title %}Source Details{% endblock %}
 
 {% block content %}
-     <p>
-        <a href="{% url 'currency:source-create' %}">Create new source</a>
-    </p>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>URL</th>
-            <th>Name</th>
-            <th>City</th>
-            <th>Phone</th>
-        </tr>
-        <tr>
-            <td>{{ source.id }}</td>
-            <td>{{ source.source_url }}</td>
-            <td>{{ source.name }}</td>
-            <td>{{ source.city }}</td>
-            <td>{{ source.phone }}</td>
-        </tr>
-    </table>
+    <div class="container">
+        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
+    </div>
+
+    <div class="container">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>URL</th>
+                    <th>Name</th>
+                    <th>City</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>{{ source.id }}</td>
+                    <td>{{ source.source_url }}</td>
+                    <td>{{ source.name }}</td>
+                    <td>{{ source.city }}</td>
+                    <td>{{ source.phone }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
