--- a/app/currency/templates/index.html
+++ b/app/currency/templates/index.html
@@ -3,7 +3,9 @@
 {% block title %}Main Page{% endblock %}
 
 {% block content %}
-    <div class="container-fluid bg-primary">
-        <p><h3 class="display text-center">Welcome on the main page!</h3></p>
+    <div class="container-fluid">
+        <p>
+            <h3 class="display text-center">Welcome on the main page!</h3>
+        </p>
     </div>
 {%  endblock %}
