--- a/app/currency/templates/contact_us/contact_us_details.html
+++ b/app/currency/templates/contact_us/contact_us_details.html
@@ -3,24 +3,18 @@
 {% block title %}Feedback Details{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <nav class="navbar navbar-expand-lg">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'currency:rate-create' %}">Create new feedback</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="container mt-4">
+        <a href="{% url 'currency:contactus-create' %}">Create new feedback</a>
     </div>
 
-    <div class="container">
+    <div class="container my-3">
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Email</th>
-                    <th>Subject</th>
-                    <th>Message</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Subject</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
 
