--- a/app/currency/templates/rate/rate_details.html
+++ b/app/currency/templates/rate/rate_details.html
@@ -3,26 +3,20 @@
 {% block title %}Rate Details{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <nav class="navbar navbar-expand-lg">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'currency:rate-create' %}">Create new rate</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="container mt-4">
+        <a href="{% url 'currency:rate-create' %}">Create new rate</a>
     </div>
 
-    <div class="container">
+    <div class="container my-3">
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Currency</th>
-                    <th>Buy</th>
-                    <th>Sell</th>
-                    <th>Source</th>
-                    <th>Created</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Currency</th>
+                    <th scope="col">Buy</th>
+                    <th scope="col">Sell</th>
+                    <th scope="col">Source</th>
+                    <th scope="col">Created</th>
                 </tr>
             </thead>
 
