--- a/app/currency/templates/source/source_create.html
+++ b/app/currency/templates/source/source_create.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}Create Source{% endblock %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
+    <div class="container mt-4">
+        <form method="POST">
+            {% csrf_token %}
+            {% crispy form %}
+        </form>
+    </div>
 {% endblock %}
+
+
