--- a/app/currency/templates/source/source_delete.html
+++ b/app/currency/templates/source/source_delete.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}Delete Source{% endblock %}
 
 {% block content %}
-    <form method="post">
+    <div class="container mt-4">
+        <form method="post">
         {% csrf_token %}
-        <p>Do you really want to delete source with ID = {{ source.id }}</p>
-        <button type="submit">Yes</button>
-    </form>
+        {{ form|crispy }}
+            <div class="d-flex justify-content-center my-3">
+                Do you really want to delete source with ID = {{ source.id }}
+            </div>
+            <div class="d-flex justify-content-center my-3">
+                <button type="submit" class="btn btn-danger col-3">Delete</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
