--- a/app/currency/templates/source/source_list.html
+++ b/app/currency/templates/source/source_list.html
@@ -3,18 +3,12 @@
 {% block title %}Source List{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <nav class="navbar navbar-expand-lg">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="{% url 'currency:source-create' %}">Create new source</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="container mt-4">
+        <a href="{% url 'currency:rate-create' %}">Create new source</a>
     </div>
 
     {% if object_list %}
-        <div class="container">
+        <div class="container my-3">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
