--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="container mt-4">
-        <a href="{% url 'currency:rate-create' %}">Create new source</a>
+        <a href="{% url 'currency:source-create' %}">Create new source</a>
     </div>
 
     <div class="container my-3">
