--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,9 +1,11 @@
+/* Custom CSS */
+
 .container-dist {
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-  html,
+html,
 body {
     margin:0;
     padding:0;
