--- a/app/currency/templates/base.html
+++ b/app/currency/templates/base.html
@@ -39,7 +39,7 @@
         <div class="section">
             <div class="container">
                 <p>
-                    <h3 class="play text-center">{% block on_empty_db %}{% endblock %}</h3>
+                    <h3 class="text-center">{% block on_empty_db %}{% endblock %}</h3>
                 </p>
             </div>
         </div>
