--- a/app/currency/templates/rate/rate_delete.html
+++ b/app/currency/templates/rate/rate_delete.html
@@ -6,15 +6,17 @@
 
 {% block content %}
     <div class="container mt-4">
-        <form method="post">
+        <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-                <div class="d-flex justify-content-center my-3">
-                    <p>Do you really want to delete rate with ID = {{ rate.id }}</p>
-                </div>
-                <div class="d-flex justify-content-center my-3">
-                    <button type="submit">Yes</button>
-                </div>
-            </form>
+            <div class="row justify-content-center my-3">
+                <h5 class="text-center">
+                    Do you really want to delete rate with ID = {{ rate.id }}
+                </h5>
+            </div>
+            <div class="row justify-content-center my-3">
+                <button type="submit" class="btn btn-danger col-2">Delete</button>
+            </div>
+        </form>
     </div>
 {% endblock %}
