--- a/app/currency/templates/source/source_update.html
+++ b/app/currency/templates/source/source_update.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="container mt-4">
-        <form method="post">
+        <form method="POST">
             {% csrf_token %}
             {% crispy form %}
         </form>
