--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,14 +1,31 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    Login
-{% endblock title %}
+{% load crispy_forms_tags %}
+
+{% block title %}Login{% endblock title %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="Submit">Login</button>
-        <button type="Button" onclick="location.href='{% url 'password_reset' %}'">Reset Password</button>
-    </form>
+    <div class="container mt-4">
+        <form method="POST">
+            {% csrf_token %}
+            <div class="row justify-content-center">
+                <div class="col-4 mt-3">
+                    <h3 class="text-center">Login To Your Account</h3>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4 mt-3">
+                    {% crispy form %}
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-2">
+                    <button class="btn btn-primary col-12" type="submit">Login</button>
+                </div>
+                <div class="col-2">
+                    <a href="{% url 'password_reset' %}" class="btn btn-danger col-12" role="button">Reset Password</a>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock content %}
