--- a/app/templates/registration/password_reset_confirm.html
+++ b/app/templates/registration/password_reset_confirm.html
@@ -1,20 +1,26 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    Reset Password
-{% endblock title %}
+{% load crispy_forms_tags %}
+
+{% block title %}Reset Password{% endblock title %}
 
 {% block content %}
     {% if validlink %}
-        <form method="post">
+        <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Change password</button>
+            <div class="container mt-4">
+                <div class="row justify-content-center">
+                    <div class="col-4 mt-3">
+                        {% crispy form %}
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-2">
+                        <button class="btn btn-primary col-12" type="submit">Change Password</button>
+                    </div>
+                </div>
+            </div>
         </form>
-    {% else %}
-    <p>
-        The password reset link was invalid, possibly because it has already been used.
-        Please request a new password reset.
-    </p>
     {% endif %}
 {% endblock %}
+
