--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -15,7 +15,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-4 mt-3">
-                    {% crispy form %}
+                    {{ form|crispy }}
                 </div>
             </div>
             <div class="row justify-content-center">
