Added celery beat scheduled currency parsers
Minor changes to models, templates and makefile
Added currency class-based constants and custom enum class to enumerate allowed currencies

--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -22,7 +22,7 @@
             <tbody>
                 <tr>
                     <td>{{ source.id }}</td>
-                    <td>{{ source.source_url }}</td>
+                    <td>{{ source.url }}</td>
                     <td>{{ source.name }}</td>
                     <td>{{ source.city }}</td>
                     <td>{{ source.phone }}</td>
