Template fixes and refformating
Added shortcut mixin for windows

--- a/app/templates/registration/password_reset_complete.html
+++ b/app/templates/registration/password_reset_complete.html
@@ -7,9 +7,9 @@
 {% block content %}
     <div class="container mt-4">
         <div class="row justify-content-center">
-            <div class="col-4 mt-3">
+            <div class="col-8 mt-3">
                 <h3 class="text-center">
-                    Your password has been set. You may go ahead and <a href="{% url 'login' %}"></a>sign in
+                    Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a>
                 </h3>
             </div>
         </div>
