--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -8,24 +8,7 @@
     <div class="container mt-4">
         <form method="POST">
             {% csrf_token %}
-            <div class="row justify-content-center">
-                <div class="col-4 mt-3">
-                    <h3 class="text-center">Login To Your Account</h3>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-4 mt-3">
-                    {{ form|crispy }}
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-2">
-                    <button class="btn btn-primary col-12" type="submit">Login</button>
-                </div>
-                <div class="col-2">
-                    <a href="{% url 'password_reset' %}" class="btn btn-danger col-12" role="button">Reset Password</a>
-                </div>
-            </div>
+            {% crispy form %}
         </form>
     </div>
 {% endblock content %}
