--- a/app/templates/registration/password_change_done.html
+++ b/app/templates/registration/password_change_done.html
@@ -7,11 +7,11 @@
 {% block content %}
     <div class="container mt-4">
         <div class="row justify-content-center">
-            <div class="col-4 mt-3">
+            <div class="col-8 mt-3">
                 <h3 class="text-center">
                     Password has been successfully changed
                 </h3>
             </div>
         </div>
     </div>
-{% endblock content %}
+{% endblock %}
