Added logo field to Source model
Added default logos for sources that are used in scheduled tasks
Added mixins to save and delete files to/from default storage
Added corresponding shared tasks and celery configs
Minor changes to templates and common functions

--- a/app/currency/templates/source/source_list.html
+++ b/app/currency/templates/source/source_list.html
@@ -23,7 +23,7 @@
                     {% for source in object_list %}
                         <tr>
                             <td>{{ source.id }}</td>
-                            <td>{{ source.source_url }}</td>
+                            <td>{{ source.url }}</td>
                             <td>{{ source.name }}</td>
                             <td>
                                 <a href="{% url 'currency:source-details' source.id %}">Details</a>
