--- a/app/currency/templates/source/source_create.html
+++ b/app/currency/templates/source/source_create.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="container mt-4">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {% crispy form %}
         </form>
