--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -7,27 +7,46 @@
         <a href="{% url 'currency:source-create' %}">Create new source</a>
     </div>
 
-    <div class="container my-3">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">URL</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">City</th>
-                    <th scope="col">Phone</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td>{{ source.id }}</td>
-                    <td>{{ source.url }}</td>
-                    <td>{{ source.name }}</td>
-                    <td>{{ source.city }}</td>
-                    <td>{{ source.phone }}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="container mt-4">
+        <div class="row justify-content-center">
+            <div class="col-4 mt-3">
+                <img class="rounded mx-auto d-block" src="{{ object.logo_url }}" width="200" height="200" alt="wrong image"
+                     style="max-width: 200px; max-height: 200px; width: auto; height: auto;">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 mt-3">
+                <table class="table table-striped table-hover">
+                    <tr>
+                        <th scope="col">ID</th>
+                        <td>{{ source.id }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="col">URL</th>
+                        <td>{{ source.url }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <td>{{ source.name }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="col">City</th>
+                        {% if source.city %}
+                            <td>{{ source.city }}</td>
+                        {% else %}
+                            <td>-</td>
+                        {% endif %}
+                    </tr>
+                    <tr>
+                        <th scope="col">Phone</th>
+                        {% if source.phone %}
+                            <td>{{ source.phone }}</td>
+                        {% else %}
+                            <td>-</td>
+                        {% endif %}
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 {% endblock %}
