Minor changes to celery tasks

--- a/app/currency/templates/source/source_details.html
+++ b/app/currency/templates/source/source_details.html
@@ -30,6 +30,10 @@
                         <td>{{ source.name }}</td>
                     </tr>
                     <tr>
+                        <th scope="col">Code</th>
+                        <td>{{ source.code }}</td>
+                    </tr>
+                    <tr>
                         <th scope="col">City</th>
                         {% if source.city %}
                             <td>{{ source.city }}</td>
