Added pagination template
Added custom management commands
Added new flake8 config rules, since management commands shadowing built-in command help

--- a/app/currency/templates/rate/rate_list.html
+++ b/app/currency/templates/rate/rate_list.html
@@ -41,6 +41,10 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="container mt-3">
+            {% include 'includes/pagination.html' %}
+        </div>
     {% endif %}
 {% endblock %}
 
