Added django-filter support
Now django-filters and pagination are friends thanks to a newly added mixin
Added filter template and filters for currency model
Minor corresponding changes to list view templates and views

--- a/app/currency/templates/contact_us/contact_us_list.html
+++ b/app/currency/templates/contact_us/contact_us_list.html
@@ -9,6 +9,9 @@
 
     {% if object_list %}
         <div class="container my-3">
+            {% include 'includes/filter.html' %}
+        </div>
+        <div class="container my-3">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
@@ -34,6 +37,10 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
+
+        <div class="container mt-3">
+            {% include 'includes/pagination.html' %}
         </div>
     {% endif %}
 {% endblock %}
