--- a/app/currency/templates/includes/pagination.html
+++ b/app/currency/templates/includes/pagination.html
@@ -1,8 +1,10 @@
+{% load custom_tags %}
+
 <nav>
     <ul class="pagination justify-content-center">
         <li class="page-item {% if page_obj.has_previous %} {% else %} disabled {% endif %}">
             {% if page_obj.has_previous %}
-                <a class="page-link" href="?page=1" aria-label="First">
+                <a class="page-link" href="{{ '?page=1'|concat_urls:filter_params }}" aria-label="First">
                   <span aria-hidden="true">&laquo;&laquo;</span>
                 </a>
             {% else %}
@@ -11,7 +13,7 @@
         </li>
         <li class="page-item {% if page_obj.has_previous %} {% else %} disabled {% endif %}">
             {% if page_obj.has_previous %}
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number|concat_urls:filter_params }}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             {% else %}
@@ -22,12 +24,12 @@
             {% if page_obj.number == i %}
                 <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
             {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
-                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ i|concat_urls:filter_params }}">{{ i }}</a></li>
             {% endif %}
         {% endfor %}
         <li class="page-item {% if page_obj.has_next %} {% else %} disabled {% endif %}">
             {% if page_obj.has_next %}
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                <a class="page-link" href="?page={{ page_obj.next_page_number|concat_urls:filter_params }}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             {% else %}
@@ -36,7 +38,7 @@
         </li>
         <li class="page-item {% if page_obj.has_next %} {% else %} disabled {% endif %}">
             {% if page_obj.has_next %}
-                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages|concat_urls:filter_params }}" aria-label="Last">
                     <span aria-hidden="true">&raquo;&raquo;</span>
                 </a>
             {% else %}
