--- a/app/currency/templates/contact_us/contact_us_list.html
+++ b/app/currency/templates/contact_us/contact_us_list.html
@@ -46,7 +46,11 @@
 {% endblock %}
 
 {% block on_empty_db %}
-    {% if not object_list %}
-        There are no records in Contact Us DB!
+    {% if not object_list and filter_params %}
+        {% if filter_params %}
+            None of the records match the filter parameters
+        {% else %}
+            There are no records in Contact Us DB!
+        {% else %}
     {% endif %}
 {% endblock %}
