--- a/app/currency/templates/contact_us/contact_us_list.html
+++ b/app/currency/templates/contact_us/contact_us_list.html
@@ -51,6 +51,6 @@
             None of the records match the filter parameters
         {% else %}
             There are no records in Contact Us DB!
-        {% else %}
+        {% endif %}
     {% endif %}
 {% endblock %}
