--- a/app/currency/templates/rate/rate_list.html
+++ b/app/currency/templates/rate/rate_list.html
@@ -57,6 +57,6 @@
             None of the records match the filter parameters
         {% else %}
             There are no records in Rate DB!
-        {% else %}
+        {% endif %}
     {% endif %}
 {% endblock %}
