Reorganization of templates and imports
Imports are now organized into four categories (standard library, django, third-party imports, and project-specific imports) separated by empty line
All templates are moved into separate templates folder
All images are grouped into images folder
Minor changes to HTML files

--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -9,7 +9,7 @@
         </button>
 
         <a class="navbar-brand">
-                <img src="{% static 'currency_navbar.png' %}" height="60" alt="Currency Logo" loading="lazy" />
+                <img src="{% static 'images/currency_navbar.png' %}" height="60" alt="Currency Logo" loading="lazy" />
         </a>
 
         <div class="collapse navbar-collapse" id="navbarNav">
