Added new filters for Source, Contact Us and RequestResponseLog models
Minor changes and reformatting of filter related code and list templates

--- a/app/templates/includes/filter.html
+++ b/app/templates/includes/filter.html
@@ -2,8 +2,7 @@
 
 <form method="GET">
     <a data-bs-toggle="collapse" href="#collapseFilter" role="button"
-       aria-expanded="false" aria-controls="collapseFilter">
-        Filter
+       aria-expanded="false" aria-controls="collapseFilter">Filter
     </a>
 
     <div class="collapse mt-4" id="collapseFilter">
